# vector-beam

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
shaders/: beam.wgsl  bloom.wgsl  decay.wgsl  tonemap.wgsl
src/: bloom.rs  cli.rs  font.rs  geometry.rs  main.rs  scan.rs  screenshot.rs  telemetry.rs
