[package]
name = "vector-beam"
version = "0.3.0"
edition = "2024"
license = "CC-BY-NC-4.0"
description = "A vector-display / electron-beam line renderer in wgpu."

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = "0.33.0"
png = "0.18.1"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"
